# obsidian_watchtower

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
tests/: __init__.py
tests/unit/: test_artifact.py  test_claim.py  test_claim_store.py  test_evidence.py  test_evidence_store.py  test_export.py  test_plugins.py  test_utils.py
watchtower/: __init__.py
watchtower/database/: __init__.py  postgres_store.py
watchtower/export/: __init__.py  json_exporter.py  markdown_exporter.py  pdf_exporter.py
watchtower/models/: __init__.py  artifact.py  claim.py  evidence.py
watchtower/plugins/: __init__.py  base.py  manual_entry.py  registry.py
watchtower/storage/: __init__.py  artifact_store.py  claim_store.py  evidence_store.py
watchtower/utils/: __init__.py  alerts.py  diff.py
